--- a/ethereal-emporium-api-node/package.json
+++ b/ethereal-emporium-api-node/package.json
@@ -6,11 +6,20 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.9.1",
+    "morgan": "~1.9.1",
+    "winston": "^3.8.2",
+    "winston-mongodb": "^5.1.1"
   }
 }
