--- a/ethereal-emporium-api-node/vercel.json
+++ b/ethereal-emporium-api-node/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
     {
       "src": "./index.js",
-      "use": "@vercel/node",
-      "config": {
-        "timeout": 300000
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
