--- a/ethereal-emporium-api-node/package.json
+++ b/ethereal-emporium-api-node/package.json
@@ -10,6 +10,7 @@
     "config": "^3.3.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
